期中最終版

--- a/index.html
+++ b/index.html
@@ -89,10 +89,13 @@ Created by [40123158](http://chiamingyen.github.io/kmolab/blog/)
 <section data-markdown>
     <script type="text/template">
 #Week 3
+<p align="left">
+1. 觀賞影片(14-1)
+https://player.vimeo.com/video/207239262 </p>
 
 <p align="left">
-1. 完成看影片(14-1)打出英文稿</p>
-https://40123158.github.io/2017springcd_hw/blog/Week%203.html 
+英聽字幕稿 :
+https://40123158.github.io/2017springcd_hw/blog/Week%203.html </p>
 
 <p align="left">
 2. 練習在近端建立 fossil</p>
@@ -103,12 +106,12 @@ https://40123158.github.io/2017springcd_hw/blog/Week%203.html
 #Week 4
 
 <p align="left">
-1. 建立協同主機 2017springcd_bg1 : <a href="https://mde2a2.kmol.info/cdbg1">https://mde2a2.kmol.info/cdbg1</a> </p>
+1. 建立協同主機 2017springcd_bg1 : https://mde2a2.kmol.info/cdbg1 </p>
 
 <p align="left">
-2. 繪製單桿機構</p>
-<iframe src="https://player.vimeo.com/video/211511217" width="640" height="512" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/211511217">20170222_113310</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-<iframe src="data/onebar/onebar.html" width="800" height="480"></iframe>
+2. 繪製單桿機構 </p>
+
+<iframe src="https://player.vimeo.com/video/211511217" width="560" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
 <section data-markdown>
@@ -120,7 +123,8 @@ https://40123158.github.io/2017springcd_hw/blog/Week%203.html
 
 <p align="left">
 2. SolveSpace 匯出 onebar 並在 V-rep 加入馬達</p>
-<iframe src="https://player.vimeo.com/video/212852513" width="640" height="331" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/212852513">2017-04-12_10-52-31</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+<iframe src="https://player.vimeo.com/video/212852513" width="640" height="331" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
 <section data-markdown>
@@ -146,7 +150,7 @@ https://40123158.github.io/2017springcd_hw/blog/Week%203.html
 <p align="left">
 2. V-rep 試著組合 8link, 練習 dummy 相關設定</p>
 
-<iframe src="https://player.vimeo.com/video/212852513" width="640" height="331" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/212852513">2017-04-12_10-52-31</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<iframe src="https://player.vimeo.com/video/212852513" width="640" height="331" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
 <section data-markdown>
@@ -154,10 +158,32 @@ https://40123158.github.io/2017springcd_hw/blog/Week%203.html
 # Week 8
 
 <p align="left">
-1. 小組互評: https://pygroup-ag100.rhcloud.com </p>
+1. 小組互評: 
+https://pygroup-ag100.rhcloud.com </p>
 
 <p align="left">
-2. 個人自評: http://mde1a2.kmol.info:8000/k96tgzh1ofbl </p>
+2. 個人自評: 
+http://mde1a2.kmol.info:8000/k96tgzh1ofbl </p>
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+# Week 期中考
+
+<p align="left">
+ 1.Fossil Server 實習查驗 </p>
+
+<p align="left">
+2.四連桿機構協同 Trace Point 查驗 </p>
+
+<p align="left">
+3.Fourbar Walker OnShape 零件協同繪圖與組立查驗 </p>
+
+<p align="left">
+4.分組協同零件展示 </p>
+
+<p align="left">
+【期中】成果連結 : https://40123158.github.io/2017springcd_hw/blog/%E6%9C%9F%E4%B8%AD%E8%80%83.html</p>
     </script>
 </section>
 </div>
