--- a/index.html
+++ b/index.html
@@ -189,16 +189,37 @@ http://mde1a2.kmol.info:8000/k96tgzh1ofbl </p>
 <section data-markdown>
     <script type="text/template">
 # Week 11
+
+<p align="left">
+1. 利用onshape來繪製 " 漸近線正齒輪 "</p>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718130279779.png?raw=true"></p>
     </script>
 </section>
 <section data-markdown>
     <script type="text/template">
 # Week 12
+
+<p align="left">
+1. 利用onshape來繪製 " 齒輪輪系 "</p>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BC%AA%E7%B3%BB.PNG?raw=true"></p>
     </script>
 </section>
 <section data-markdown>
     <script type="text/template">
 # Week 13
+
+<p align="left">
+1. 利用onshape來繪製 " 齒輪輪系 " 並 "轉動 "</p>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BD%89%E5%8B%95.PNG?raw=true"></p>
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+# Week 15
+
+<p align="left">
+1. 利用漸開線原理, 以 Brython 繪製單一正齒輪廓</p>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BD%89%E5%8B%95.PNG?raw=true"></p>
     </script>
 </section>
 </div>
