--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@ http://mde1a2.kmol.info:8000/k96tgzh1ofbl </p>
 
 <p align="left">
 1. 利用漸開線原理, 以 Brython 繪製單一正齒輪廓</p>
-<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BD%89%E5%8B%95.PNG?raw=true"></p>
+<p align="left">
+2. 完成後, 請在正齒輪中央寫上自己的學號</p>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E6%93%B7%E5%8F%96.PNG?raw=true"></p>
     </script>
 </section>
 </div>
