--- a/index.html
+++ b/index.html
@@ -209,8 +209,18 @@ http://mde1a2.kmol.info:8000/k96tgzh1ofbl </p>
 # Week 13
 
 <p align="left">
-1. 利用onshape來繪製 " 齒輪輪系 " 並 "轉動 "</p>
+1. 繪製八連桿行走機構</p>
+<p align="left">
+2. 利用onshape來繪製 " 齒輪輪系 " 並 "轉動 "</p>
 <p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BD%89%E5%8B%95.PNG?raw=true"></p>
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+# Week 14
+
+<p align="left">
+ 1. 純 IPv6 網路的主機</p>
     </script>
 </section>
 <section data-markdown>
@@ -222,6 +232,19 @@ http://mde1a2.kmol.info:8000/k96tgzh1ofbl </p>
 <p align="left">
 2. 完成後, 請在正齒輪中央寫上自己的學號</p>
 <p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E6%93%B7%E5%8F%96.PNG?raw=true"></p>
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+# Week 17
+
+<p align="left">
+1.各組員倉儲中的 Github 檔案推送</p>
+
+<p align="left">
+2.各組員網誌上的 2D 繪圖, 並將程式碼顯示在繪圖網誌文章中
+</p>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/W17/40123158.PNG?raw=true"></p>
     </script>
 </section>
 </div>
